# semantic-router

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  .licenserc.yaml  .mergify.yml  .opencode.yaml  .pre-commit-config.yaml  .prowlabels.yaml  .security-scan-allowlist  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.all-in-one  Dockerfile.dev  Dockerfile.extproc  Dockerfile.extproc.cross  Dockerfile.precommit  ENSEMBLE_IMPLEMENTATION.md  GOVERNANCE.md  IMPLEMENTATION-SUMMARY.md  MCP_ROUTING_AND_REQUEST_FLOW.md  Makefile  OWNER  README.md  REFACTORING_SUMMARY.md  REQUIREMENTS-VALIDATION.md  SECURITY.md  TRACING_FEATURE.md  docker-compose.yml  final_evaluation.sh  finetuning_script.py  install.sh  matrix.py  matrix.sh  package-lock.json  package.json  (+6 more)
bench/fleet-simulator/: GUIDE.tex  Makefile  README.md  pyproject.toml  refs.bib  run_sim.py  server.py
bench/fleet-simulator/api/: app.py  models.py  runner.py  storage.py
bench/fleet-simulator/dashboard/: index.html
bench/fleet-simulator/data/: azure_cdf.json
bench/fleet-simulator/docs/: POWER_MODEL_METHODOLOGY.md  RELATED_WORK.md  SIM_ALGORITHMS.md  USE_CASES.md  pareto_frontier.html  tool-selector.html
bench/fleet-simulator/examples/: multi_model_fleet.json  optimizer_validation.py  routing_comparison.py  semantic_router_trace_replay.py  semantic_routing.py  what_if.py
bench/fleet-simulator/fleet_sim/: __init__.py
bench/fleet-simulator/tests/: test_api.py  test_disagg.py  test_e2e.py  test_hardware.py  test_hf_import.py  test_imports_and_profiles.py  test_models.py  test_optimizer.py  test_profiles.py
candle-binding/: Cargo.toml  OWNER  README.md  backend_contract.go  backend_contract_test.go  batched_embedding.go  build.rs  cross_encoder_live_test.go  cstring_input.go  cstring_input_test.go  embedding_errors.go  embedding_errors_test.go  embedding_metadata.go  embedding_metadata_test.go  errors.go  image_destination.go  image_destination_test.go  image_input.go  image_input_test.go  multimodal_output.go  pref64_policy.go  pref64_policy_test.go  regex_provider.go  regex_provider_test.go  semantic-router.go  semantic-router_mock.go  semantic-router_mock_test.go  semantic-router_test.go  semantic_router_mock_contract_test.go
candle-binding/examples/: benchmark_concurrent.rs  benchmark_performance.rs  embedding_benchmark.rs  list_safetensors_keys.rs  mmbert_2d_matryoshka_bench.rs  mmbert_32k_scalability_bench.rs  test_32k_classifier_inference.rs  test_classifier_compatibility.rs  test_full_inference_32k.rs  test_layer_early_exit.rs  test_long_text_inference_32k.rs  test_lora_compatibility_32k.rs  test_lora_inference_32k.rs  test_mmbert_lora.rs  test_mmbert_real.rs  test_mmbert_variant.rs  test_modernbert_32k.rs  test_modernbert_32k_validation.rs  test_multimodal_embed.rs  test_phase4_comprehensive.rs
candle-binding/src/: bert_official.rs  lib.rs  modernbert.rs  registry.rs  test_fixtures.rs  unified_classifier.rs
candle-binding/src/classifiers/: mlp_selector.rs  mod.rs  unified.rs  unified_test.rs
candle-binding/src/core/: AGENTS.md  config_loader.rs  mod.rs  similarity.rs  tokenization.rs  unified_error.rs
candle-binding/src/ffi/: classify.rs  classify_bert.rs  classify_hallucination.rs  classify_mmbert.rs  classify_modernbert.rs  complexity.rs  dealloc_layout_test.rs  embedding.rs  embedding_multimodal.rs  embedding_routing.rs  embedding_similarity.rs  embedding_test.rs  generative_classifier.rs  generative_guard.rs  image_input.rs  init.rs  init_classifiers.rs  init_mmbert.rs  init_test.rs  memory.rs  memory_safety.rs  memory_safety_test.rs  ml_algorithms.rs  mlp.rs  mod.rs  (+11 more)
candle-binding/test_data/: long_prompt_fixtures.json
candle-binding/testdata/: reranker_parity_golden.json
candle-binding/tests/: classification_output_demo.rs  layout_test.rs
dashboard/agent-service/: README.md  pyproject.toml  requirements.txt
e2e-tests/llm-katan/: demo-embed.html  pyproject.toml  terminal-demo.html
ml-binding/: Cargo.toml  OWNER  README.md  ml_binding.go  ml_binding_race_test.go
ml-binding/src/: ffi.rs  kmeans.rs  knn.rs  lib.rs  mlp.rs  svm.rs
nlp-binding/: Cargo.toml  OWNER  README.md  go.mod  nlp_binding.go  nlp_binding_mock.go  nlp_binding_test.go
nlp-binding/src/: bm25_classifier.rs  ffi.rs  lib.rs  ngram_classifier.rs
onnx-binding/: Cargo.toml  Dockerfile.fa-test  Dockerfile.migraphx-bench  Dockerfile.migraphx-bench.dockerignore  Dockerfile.rocm  MIGRAPHX_PROVIDER_STRATEGY.md  OWNER  README.md  abi_layout_test.go  backend_contract.go  backend_contract_test.go  cstring_input_test.go  embedding_errors.go  embedding_errors_test.go  embedding_metadata.go  embedding_metadata_test.go  go.mod  image_destination.go  image_destination_test.go  image_input.go  image_input_test.go  input_contract_test.go  pref64_policy.go  pref64_policy_test.go  semantic-router.go  semantic-router_test.go
onnx-binding/examples/: benchmark_cpu_vs_gpu.rs  benchmark_mmbert_latency.rs  benchmark_mmbert_ort_providers.rs  test_classifier.rs  test_gpu.rs
onnx-binding/scripts/: build_rocm.sh  eval_router_signal_artifacts.py  export_2d_matryoshka.py  rewrite_migraphx_safe_onnx.py  run_mmbert_migraphx_bench.sh
onnx-binding/src/: lib.rs
onnx-binding/test_data/: long_prompt_fixtures.json
openvino-binding/: .gitignore  CMakeLists.txt  Dockerfile  README.md  convert_modernbert_models.py  go.mod  semantic-router.go  semantic-router_lora_test.go  semantic-router_test.go
openvino-binding/bench/: go.mod  mmbert_classifier_bench.go  mmbert_embedding_bench.go
openvino-binding/cmake/: openvino_semantic_routerConfig.cmake.in
openvino-binding/examples/: embedding_example.go  lora_example.go  similarity_example.go
openvino-binding/scripts/: build_and_run_mmbert_classifier_bench.sh  build_and_run_mmbert_embedding_bench.sh  convert_all_lora_models.sh  convert_lora_models.py  convert_test_tokenizers.py  convert_tokenizers.py
src/fleet-sim/: .gitignore  .ruff.toml  AGENTS.md  Dockerfile  Makefile  OWNER  README.md  pyproject.toml  requirements.txt  run_sim.py  server.py
(+5899 files in other folders)
