[package]
name = "ml_semantic_router"
version = "0.1.0"
edition = "2021"
description = "ML algorithms binding for semantic-router using Linfa"
license = "Apache-2.0"

[lib]
name = "ml_semantic_router"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Linfa ML framework - aligned with FusionFactory (arXiv:2507.10540) query-level fusion
linfa = "0.7"
linfa-clustering = "0.7"   # KMeans clustering
linfa-nn = "0.7"           # K-Nearest Neighbors
linfa-svm = "0.7"          # Support Vector Machine

# Linear algebra (must match Linfa's ndarray version)
ndarray = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pin noisy_float to version compatible with Rust 1.75
noisy_float = "=0.2.0"

# FFI
libc = "0.2"

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
