[package]
name = "nlp-binding"
version = "0.1.0"
edition = "2021"
description = "Go bindings for BM25 and N-gram keyword classification via Rust FFI"
license = "MIT OR Apache-2.0"

[lib]
name = "nlp_binding"
# rlib for Rust-to-Rust linking, staticlib for C/Go FFI (static), cdylib for dynamic linking
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
bm25 = "2.3"
ngrammatic = "0.7"
libc = "0.2"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
